# job-hunter

./: .gitattributes  .gitignore  .pre-commit-config.yaml  DASHBOARD.md  README.md  dashboard.py  example_digest.md  example_recommend.md  example_stats.md  job_hunter.py  jobs.db  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
docs/examples/: example_export.csv  example_export.json
src/job_hunter/: __init__.py  cli.py  config.py  db.py  digest.py  exporters.py  filters.py  logging_utils.py  models.py  scoring.py  utils.py
src/job_hunter/scrapers/: arbeitnow.py  base.py  hackernews.py  indeed.py  remoteok.py
tests/: test_cli_smoke.py  test_config.py  test_db_and_exports.py  test_models.py  test_reliability.py  test_scoring.py
