[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "job-hunter"
version = "2.0.0"
description = "Production-grade job discovery CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "click>=8.1.7",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
  "black==25.1.0",
  "pytest-asyncio>=0.23.0",
  "mypy>=1.11.0",
  "pre-commit>=3.8.0",
]

[project.scripts]
job-hunter = "job_hunter.cli:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]


[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
show_error_codes = true
pretty = true
